--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
   "util": "^0.12.4",
   "wa-sticker-formatter": "^3.6.0",
   "xfarr-api": "^1.0.3",
-  "yargs": "^17.2.1",
-  "yt-search": "^2.10.2"
+  "yargs": "^17.2.1"
  },
  "directories": {
   "lib": "lib",
